appId: "com.i_amtheguy.potato"  # Replace with your actual app ID (package name or bundle identifier)
---
- launchApp

- tapOn: "Calendar"

- tapOn: "courses"

- tapOn: "7"

